# nllb-tuning

./: .gitignore  README.md  app.py  dataset.py  predict_model.ipynb  predict_model.py  pyproject.toml  test_model.py  train_model.py  train_tokenizer.py
notebooks/: convert_to_transformers.ipynb  predict_model.ipynb  push_to_hub.ipynb
src/: predict_model.py  test_model.py  train_model.py  train_tokenizer.py  utils.py
